--- a/cart.html
+++ b/cart.html
@@ -174,13 +174,13 @@
     <script src="js/base.js"></script>
     <script src="js/cart.js"></script>
     <script>
-      <!-- 显示空购物车页面-->
+      //  显示空购物车页面
       $(function () {
         if (!$(".imfor")) {
-          $("#section").hide()
-          $(".none").show()
+          $("#section").hide();
+          $(".none").show();
         }
-      })
+      });
     </script>
   </body>
 </html>
